tests/invalid/generated_binop_bitor_none_none/main.py
# Auto-generated invalid binop case.
def main() -> None:
    x: None = None
    y: None = None
    z = x | y
